--- a/404.html
+++ b/404.html
@@ -20,14 +20,7 @@
 
 <h2 id="404-file-not-found">404: File Not Found</h2>
 
-<p>You got a four o’ four<br />
-You got a four o’ four<br />
-When the path looks rough ahead<br />
-And you’re miles and miles<br />
-From your asset bed<br />
-You just remember what this error said<br />
-Boy, you got a four o’ four<br />
-Yeah, you got a four o’ four</p>
+<p>Whoops, we could not find this server on this IP Address...<br />
 
 <p><a href="https://localhost:4664">Click here for the server homepage</a><br />
 <a href="http://localhost:4343">Click here for the video list</a></p>
