--- a/404.html
+++ b/404.html
@@ -22,8 +22,8 @@
 
 <p>Whoops, we could not find this server on this IP Address...<br />
 
-<p><a href="https://localhost:4664">Click here for the server homepage</a><br />
-<a href="http://localhost:4343">Click here for the video list</a></p>
+<p><a href="/Wrapper-Offline-Servers-Online">Click here for the server homepage</a><br />
+<a href="http://wrapper-offline-1-2-3-master.herokuapp.com">Click here for the video list</a></p>
 
 
 </main>
